tests/suite/fail/generated/types/fail_sub_i64_string.ny
fn main() {
    let _ = 1 - "a" //~ ERROR Invalid operation on string
}
